# castor

./: CMakeLists.txt  README.md  pdfdata
src/: CMakeLists.txt  castor_xs.cpp  gitsha1.cpp.in  gitsha1.h
